--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "pg": "^8.11.0",
     "@faker-js/faker": "^8.3.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "mongoose": "^7.4.3"
   }
 }
