--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_MEM=1g
 
 # Parâmetros do dataset
 DATASET_SIZE=50000
-USE_INDEX=false  # true = cria índices automaticamente no seed
+USE_INDEX=true  # true = cria índices automaticamente no seed
 
 # Parâmetros do teste
 TARGET_URL=http://app:3000
