MUDEI A PORRA TODA

--- a/.env
+++ b/.env
@@ -1,24 +1,34 @@
 # Banco de dados
-DB_TYPE=postgres
+DB_TYPE=postgres # postgres ou mongo
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=testdb
 
 # Recursos dos containers
 APP_CPUS=0.5
-APP_MEM=512m
-DB_CPUS=1.0
-DB_MEM=1g
+APP_MEM=1g
 
 # Parâmetros do dataset
 DATASET_SIZE=50000
-USE_INDEX=true  # true = cria índices automaticamente no seed
+USE_INDEX=true
 
 # Parâmetros do teste
 TARGET_URL=http://app:3000
-DURATION=60          # duração do teste (s)
-CONCURRENCY=100      # número de clientes simultâneos
-READ_RATIO=0.5       # proporção de leituras
-WRITE_RATIO=0.5      # proporção de escritas
+DURATION=60
+CONCURRENCY=100
 MONITOR_TARGET=app
 REPORT_INTERVAL=15
+
+# Ativa/desativa a rota de leitura secundária (GET /users/:uid)
+# Se "false", sua proporção (SECONDARY_READ_RATIO) será adicionada à proporção de Escrita.
+ENABLE_SECONDARY_READS=true
+
+# Proporção de leituras primárias (GET /posts/:id)
+READ_RATIO=0.8
+
+# Proporção de leituras secundárias (GET /users/:uid/posts)
+# Só é usada se ENABLE_SECONDARY_READS=true
+SECONDARY_READ_RATIO=0.1
+
+# NOTA: A proporção de escrita (WRITE_RATIO) é calculada automaticamente pelo loadtest.py
+# (1.0 - READ_RATIO - SECONDARY_READ_RATIO)
