--- a/loadtester/Dockerfile
+++ b/loadtester/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.11-slim
-WORKDIR /test
+WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY loadtest.py .
