Removido leitura secundárias

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Banco de dados
-DB_TYPE=postgres # postgres ou mongo
+DB_TYPE=mongo # postgres ou mongo
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=testdb
@@ -9,7 +9,7 @@ APP_CPUS=0.5
 APP_MEM=1g
 
 # Parâmetros do dataset
-DATASET_SIZE=20000
+DATASET_SIZE=50000
 USE_INDEX=true
 
 # Parâmetros do teste
@@ -19,16 +19,10 @@ CONCURRENCY=100
 MONITOR_TARGET=app
 REPORT_INTERVAL=15
 
-# Ativa/desativa a rota de leitura secundária (GET /users/:uid)
-# Se "false", sua proporção (SECONDARY_READ_RATIO) será adicionada à proporção de Escrita.
-ENABLE_SECONDARY_READS=true
 
 # Proporção de leituras primárias (GET /posts/:id)
 READ_RATIO=0.5
 
-# Proporção de leituras secundárias (GET /users/:uid/posts)
-# Só é usada se ENABLE_SECONDARY_READS=true
-SECONDARY_READ_RATIO=0.1
 
 # NOTA: A proporção de escrita (WRITE_RATIO) é calculada automaticamente pelo loadtest.py
-# (1.0 - READ_RATIO - SECONDARY_READ_RATIO)
+# (1.0 - READ_RATIO)
