--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Banco de dados
-DB_TYPE=mongo # postgres ou mongo
+DB_TYPE=postgres # postgres ou mongo
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=testdb
@@ -9,8 +9,8 @@ APP_CPUS=0.5
 APP_MEM=1g
 
 # Parâmetros do dataset
-DATASET_SIZE=50000
-USE_INDEX=true
+DATASET_SIZE=20000
+USE_INDEX=false
 
 # Parâmetros do teste
 TARGET_URL=http://app:3000
@@ -21,7 +21,7 @@ REPORT_INTERVAL=15
 
 
 # Proporção de leituras primárias (GET /posts/:id)
-READ_RATIO=0
+READ_RATIO=0.5
 
 
 # NOTA: A proporção de escrita (WRITE_RATIO) é calculada automaticamente pelo loadtest.py
